--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 <body>
     <main>
         <div class="container">
-            <div class="left">
+            <div class="box left">
                 <canvas id="ctx" width="512" height="512"></canvas>
                 
             </div>
-            <div class="right">
-                <h1>Config</h1>
+            <div class="box right">
+                <div class="content">
+                    <h1>Configuration</h1>
+                    <hr>
+                </div>
             </div>
         </div>
         <div class="options">
