--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>World Generator JS</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src='perlin.js'></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <main>
@@ -16,15 +17,17 @@
                 
             </div>
             <div class="box right">
+                <div class="options">
+                    <div class="button fa fa-play" id="Generate"> 
+                    </div>
+                    <div class="button fa fa-download" id="Download">
+                    </div>
+                </div>
                 <div class="content">
                     <h1>Configuration</h1>
                     <hr>
                 </div>
             </div>
-        </div>
-        <div class="options">
-                <button class="tab" id="Generate">Generate</button>
-                <button class="tab" id="Download">Download</button>
         </div>
     </main>
     
