--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <hr>
                     <h2>World Type</h2>
                     <div class="custom-select">
-                        <select>
+                        <select id="worldTypeSelect">
                           <option value="island">Island</option>
                           <option value="big">Big</option>
                         </select>
